# platformer

./: LICENSE  README.md  pyproject.toml
Assets/tiles/: tiles_spritesheet.xml
scripts/: main.py
scripts/player/: player.py
scripts/tiles/: box.py  brick.py  bridge.py  castle.py  dirt.py  door.py  fence.py  grass.py  hill.py  ladder.py  liquid.py  lock.py  rock.py  rope.py  sand.py  sign.py  snow.py  stone.py  toch.py  torch.py  window.py
scripts/utils/: spriteLoader.py  sprite_parser.py  templates.py
